syntax.output
Terminals unused in grammar

   ASSIGN


状态 26 conflicts: 1 shift/reduce
状态 33 conflicts: 1 shift/reduce
状态 76 conflicts: 1 shift/reduce
状态 77 conflicts: 1 shift/reduce
状态 104 conflicts: 1 shift/reduce
状态 105 conflicts: 1 shift/reduce
状态 106 conflicts: 1 shift/reduce
状态 107 conflicts: 1 shift/reduce
状态 108 conflicts: 1 shift/reduce
状态 109 conflicts: 1 shift/reduce
状态 110 conflicts: 1 shift/reduce
状态 112 conflicts: 10 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 FunDec: ID LP VarList RP
   18       | ID LP RP
   19       | error RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt
   32     | error SEMI

   33 DefList: Def DefList
   34        | %empty

   35 Def: Specifier DecList SEMI
   36    | error SEMI

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: VarDec
   40    | VarDec ASSIGNOP Exp

   41 VarDec: ID
   42       | VarDec LB INT RB
   43       | error RB

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp ADD Exp
   49    | Exp SUB Exp
   50    | Exp MUL Exp
   51    | Exp DIV Exp
   52    | LP Exp RP
   53    | SUB Exp
   54    | NOT Exp
   55    | ID LP Args RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | ID
   60    | INT
   61    | FLOAT
   62    | error RP
   63    | error RB

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 32 36 43 62 63
INT (258) 42 60
FLOAT (259) 61
ID (260) 14 16 17 18 41 55 56 58 59
TYPE (261) 10
ADD (262) 48
SUB (263) 49 53
MUL (264) 50
DIV (265) 51
AND (266) 45
OR (267) 46
NOT (268) 54
RELOP (269) 47
LP (270) 17 18 29 30 31 52 55 56
RP (271) 17 18 19 29 30 31 52 55 56 62
LB (272) 42 57
RB (273) 42 43 57 63
LC (274) 12 23
RC (275) 12 23
SEMI (276) 4 5 7 26 28 32 35 36
COMMA (277) 9 20 38 64
STRUCT (278) 12 13
RETURN (279) 28
IF (280) 29 30
ELSE (281) 30
WHILE (282) 31
ASSIGNOP (283) 40 44
DOT (284) 58
ASSIGN (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    左： 0
Program (33)
    左： 1, 右： 0
ExtDefList (34)
    左： 2 3, 右： 1 3
ExtDef (35)
    左： 4 5 6 7, 右： 3
ExtDecList (36)
    左： 8 9, 右： 4 9
Specifier (37)
    左： 10 11, 右： 4 5 6 22 35
StructSpecifier (38)
    左： 12 13, 右： 11
OptTag (39)
    左： 14 15, 右： 12
Tag (40)
    左： 16, 右： 13
FunDec (41)
    左： 17 18 19, 右： 6
VarList (42)
    左： 20 21, 右： 17 20
ParamDec (43)
    左： 22, 右： 20 21
CompSt (44)
    左： 23, 右： 6 27
StmtList (45)
    左： 24 25, 右： 23 24
Stmt (46)
    左： 26 27 28 29 30 31 32, 右： 24 29 30 31
DefList (47)
    左： 33 34, 右： 12 23 33
Def (48)
    左： 35 36, 右： 33
DecList (49)
    左： 37 38, 右： 35 38
Dec (50)
    左： 39 40, 右： 37 38
VarDec (51)
    左： 41 42 43, 右： 8 9 22 39 40 42
Exp (52)
    左： 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63, 右： 26 28 29 30 31 40 44 45 46 47 48 49 50 51 52 53 54 57
    58 64 65
Args (53)
    左： 64 65, 右： 55 64


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          转到状态4
    ExtDefList       转到状态5
    ExtDef           转到状态6
    Specifier        转到状态7
    StructSpecifier  转到状态8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态11
    Tag     转到状态12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       转到状态14
    ExtDef           转到状态6
    Specifier        转到状态7
    StructSpecifier  转到状态8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  转到状态18
    FunDec      转到状态19
    VarDec      转到状态20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   19 FunDec: error . RP
   43 VarDec: error . RB

    RP  shift, and go to state 22
    RB  shift, and go to state 23


State 16

   17 FunDec: ID . LP VarList RP
   18       | ID . LP RP
   41 VarDec: ID .

    LP  shift, and go to state 24

    $default  reduce using rule 41 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  转到状态27


State 20

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   42 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 28
    COMMA  shift, and go to state 29

    $default  reduce using rule 8 (ExtDecList)


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 34 (DefList)

    Specifier        转到状态31
    StructSpecifier  转到状态8
    DefList          转到状态32
    Def              转到状态33


State 22

   19 FunDec: error RP .

    $default  reduce using rule 19 (FunDec)


State 23

   43 VarDec: error RB .

    $default  reduce using rule 43 (VarDec)


State 24

   17 FunDec: ID LP . VarList RP
   18       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        转到状态35
    StructSpecifier  转到状态8
    VarList          转到状态36
    ParamDec         转到状态37


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   23 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 34 (DefList)]
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    SUB     reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)

    Specifier        转到状态31
    StructSpecifier  转到状态8
    DefList          转到状态38
    Def              转到状态33


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   42 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


State 29

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 40
    ID     shift, and go to state 41

    ExtDecList  转到状态42
    VarDec      转到状态20


State 30

   36 Def: error . SEMI

    SEMI  shift, and go to state 43


State 31

   35 Def: Specifier . DecList SEMI

    error  shift, and go to state 40
    ID     shift, and go to state 41

    DecList  转到状态44
    Dec      转到状态45
    VarDec   转到状态46


State 32

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 33

   33 DefList: Def . DefList

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 34 (DefList)]
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    SUB     reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)

    Specifier        转到状态31
    StructSpecifier  转到状态8
    DefList          转到状态48
    Def              转到状态33


State 34

   18 FunDec: ID LP RP .

    $default  reduce using rule 18 (FunDec)


State 35

   22 ParamDec: Specifier . VarDec

    error  shift, and go to state 40
    ID     shift, and go to state 41

    VarDec  转到状态49


State 36

   17 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 37

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 21 (VarList)


State 38

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    SUB     shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 26
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 25 (StmtList)

    CompSt    转到状态62
    StmtList  转到状态63
    Stmt      转到状态64
    Exp       转到状态65


State 39

   42 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 66


State 40

   43 VarDec: error . RB

    RB  shift, and go to state 23


State 41

   41 VarDec: ID .

    $default  reduce using rule 41 (VarDec)


State 42

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 43

   36 Def: error SEMI .

    $default  reduce using rule 36 (Def)


State 44

   35 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


State 45

   37 DecList: Dec .
   38        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 37 (DecList)


State 46

   39 Dec: VarDec .
   40    | VarDec . ASSIGNOP Exp
   42 VarDec: VarDec . LB INT RB

    LB        shift, and go to state 28
    ASSIGNOP  shift, and go to state 69

    $default  reduce using rule 39 (Dec)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 48

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


State 49

   22 ParamDec: Specifier VarDec .
   42 VarDec: VarDec . LB INT RB

    LB  shift, and go to state 28

    $default  reduce using rule 22 (ParamDec)


State 50

   17 FunDec: ID LP VarList RP .

    $default  reduce using rule 17 (FunDec)


State 51

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态35
    StructSpecifier  转到状态8
    VarList          转到状态70
    ParamDec         转到状态37


State 52

   32 Stmt: error . SEMI
   62 Exp: error . RP
   63    | error . RB

    RP    shift, and go to state 71
    RB    shift, and go to state 72
    SEMI  shift, and go to state 73


State 53

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


State 54

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


State 55

   55 Exp: ID . LP Args RP
   56    | ID . LP RP
   59    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 59 (Exp)


State 56

   53 Exp: SUB . Exp

    error  shift, and go to state 75
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    SUB    shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  转到状态76


State 57

   54 Exp: NOT . Exp

    error  shift, and go to state 75
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    SUB    shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  转到状态77


State 58

   52 Exp: LP . Exp RP

    error  shift, and go to state 75
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    SUB    shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  转到状态78


State 59

   28 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 75
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    SUB    shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  转到状态79


State 60

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 80


State 61

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 81


State 62

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 63

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 64

   24 StmtList: Stmt . StmtList

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    SUB     shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 26
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 25 (StmtList)

    CompSt    转到状态62
    StmtList  转到状态83
    Stmt      转到状态64
    Exp       转到状态65


State 65

   26 Stmt: Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . ADD Exp
   49    | Exp . SUB Exp
   50    | Exp . MUL Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ADD       shift, and go to state 84
    SUB       shift, and go to state 85
    MUL       shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    LB        shift, and go to state 91
    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    DOT       shift, and go to state 94


State 66

   42 VarDec: VarDec LB INT RB .

    $default  reduce using rule 42 (VarDec)


State 67

   35 Def: Specifier DecList SEMI .

    $default  reduce using rule 35 (Def)


State 68

   38 DecList: Dec COMMA . DecList

    error  shift, and go to state 40
    ID     shift, and go to state 41

    DecList  转到状态95
    Dec      转到状态45
    VarDec   转到状态46


State 69

   40 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 75
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    SUB    shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  转到状态96


State 70

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 71

   62 Exp: error RP .

    $default  reduce using rule 62 (Exp)


State 72

   63 Exp: error RB .

    $default  reduce using rule 63 (Exp)


State 73

   32 Stmt: error SEMI .

    $default  reduce using rule 32 (Stmt)


State 74

   55 Exp: ID LP . Args RP
   56    | ID LP . RP

    error  shift, and go to state 75
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    SUB    shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 97

    Exp   转到状态98
    Args  转到状态99


State 75

   62 Exp: error . RP
   63    | error . RB

    RP  shift, and go to state 71
    RB  shift, and go to state 72


State 76

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . ADD Exp
   49    | Exp . SUB Exp
   50    | Exp . MUL Exp
   51    | Exp . DIV Exp
   53    | SUB Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    ASSIGNOP  shift, and go to state 93

    ASSIGNOP  [reduce using rule 53 (Exp)]
    $default  reduce using rule 53 (Exp)


State 77

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . ADD Exp
   49    | Exp . SUB Exp
   50    | Exp . MUL Exp
   51    | Exp . DIV Exp
   54    | NOT Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ADD       shift, and go to state 84
    SUB       shift, and go to state 85
    MUL       shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    ASSIGNOP  shift, and go to state 93

    ASSIGNOP  [reduce using rule 54 (Exp)]
    $default  reduce using rule 54 (Exp)


State 78

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . ADD Exp
   49    | Exp . SUB Exp
   50    | Exp . MUL Exp
   51    | Exp . DIV Exp
   52    | LP Exp . RP
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ADD       shift, and go to state 84
    SUB       shift, and go to state 85
    MUL       shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    RP        shift, and go to state 100
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 93
    DOT       shift, and go to state 94


State 79
